# pfc-kafka-consumer

./: CHANGELOG.md  README.md  pfc_kafka_consumer.py  pyproject.toml
config/: config.toml
tests/: e2e_integration_test.py  test_kafka_consumer.py  test_resilience.py
