[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "pfc-kafka-consumer"
version         = "0.1.0"
description     = "Kafka consumer that compresses log messages directly to PFC format"
readme          = "README.md"
license         = { text = "PFC Commercial License v1.0" }
requires-python = ">=3.10"
keywords        = ["kafka", "logs", "compression", "pfc-jsonl", "observability", "redpanda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "confluent-kafka>=2.0.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
s3  = ["boto3>=1.34.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
pfc-kafka-consumer = "pfc_kafka_consumer:main"

[project.urls]
Homepage   = "https://github.com/ImpossibleForge/pfc-kafka-consumer"
Repository = "https://github.com/ImpossibleForge/pfc-kafka-consumer"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
